--- a/src/static/telemetry-ui/public/index.html
+++ b/src/static/telemetry-ui/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hello Vue</title>
+  <title>MR Telemetry</title>
 </head>
 <body>
   <!-- This is where your Vue app will mount -->
   <div id="app"></div>
-  <p>IDK just show something 2</p>
+  
   <!-- The built JavaScript bundle will be injected here -->
 </body>
 </html>   
